# lumen

./: .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.cache/clangd/index/: bare_metal.hpp.CCF7591DD51ED44D.idx  board_config.hpp.E2F0A73C102D8845.idx  canvas.hpp.7E290D117284B388.idx  input_driver.hpp.DD44EB9149D32853.idx  main.cpp.05C874AA9CA26786.idx  scheduler.hpp.02579CA7FEFFB542.idx  sdl2_mouse.hpp.0A8047BB0275265A.idx  sdl2_sim.hpp.8DB40809DD65622E.idx  tick_source.hpp.D2DD557C2211CFFD.idx  touch_driver.hpp.CCC4B743BCF6D0E1.idx  types.hpp.96BA164BAFADB3A0.idx
cmake/: toolchain-arm-none-eabi.cmake
docs/: 01-architecture.md  02-building-and-flashing.md
drivers/display/: ili9341_spi.hpp  linux_drm.hpp  ltdc_dsi.hpp  sdl2_sim.hpp
drivers/touch/: ft6206.hpp  linux_evdev.hpp  sdl2_mouse.hpp  stmpe811.hpp
examples/: CMakeLists.txt
examples/dashboard/: CMakeLists.txt  main.cpp
examples/hello_button/: CMakeLists.txt  main.cpp
examples/hello_rectangle/: CMakeLists.txt  main.cpp
examples/rpi_hello/: main.cpp
examples/stm32f429_hello/: CMakeLists.txt  main.cpp
examples/stm32f769_hello/: main.cpp
examples/widget_showcase/: CMakeLists.txt  main.cpp
lumen/: lumen.hpp
lumen/core/: application.hpp  pixel_format.hpp  scheduler.hpp  types.hpp
lumen/gfx/: canvas.hpp  dirty_manager.hpp  font.hpp  font_face.hpp  sdf_font.hpp
lumen/gfx/fonts/: liberation_sans_10.hpp  liberation_sans_14.hpp  liberation_sans_20.hpp  liberation_sans_bold_10.hpp  liberation_sans_bold_14.hpp  liberation_sans_bold_20.hpp  liberation_sans_sdf16.hpp
lumen/gfx/images/: test_icon.hpp
lumen/hal/: display_driver.hpp  input_driver.hpp  tick_source.hpp  touch_driver.hpp
lumen/hal/os/: bare_metal.hpp  freertos.hpp  linux.hpp
lumen/hal/stm32/: dma2d.hpp  gpio.hpp  i2c.hpp  spi.hpp  uart.hpp
lumen/platform/: board_config.hpp
lumen/ui/: animation.hpp  container.hpp  gesture.hpp  layout.hpp  live_reload.hpp  screen.hpp  script.hpp  style.hpp  transition.hpp  widget.hpp  widget_registry.hpp
lumen/ui/widgets/: button.hpp  checkbox.hpp  image.hpp  label.hpp  progress_bar.hpp  scroll_list.hpp  sdf_label.hpp  slider.hpp  toggle.hpp
platform/desktop_sdl2/: board_config.hpp
platform/raspberry_pi/: board_config.hpp
platform/stm32f429_disco/: CMakeLists.txt  board_config.hpp  startup.cpp  stm32f429zi.ld
platform/stm32f769_disco/: CMakeLists.txt  board_config.hpp  dsi_lcd_init.hpp  startup.cpp  stm32f769ni.ld
src/gfx/: font_6x8.cpp
tests/: hw_test_f429.cpp  integration_f429.cpp  probe_read.sh  run_all.sh  test.hpp  test_gesture.cpp  test_script.cpp  verify_hw.sh  verify_integration.sh  visual_test.cpp
tests/screenshots/: button.ppm  button_pressed.ppm  checkbox.ppm  image_widget.ppm  label.ppm  multi_widget.ppm  scroll_list.ppm  scroll_list_scrolled.ppm  sdf_label.ppm  theme_dark.ppm  theme_light.ppm  transition_wipe.ppm
tools/: Cargo.toml
tools/src/: font.rs  image.rs  main.rs  sdf_font.rs
